wpp added and header fixed

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <link rel="stylesheet" href="src/styles/products.css">
         <link rel="stylesheet" href="src/styles/blog.css">
         
-        <title>teste</title>
+        <title>Bellita</title>
     </head>
     <body>
+        <snap id="wpp"><a href=""><img src="/images/wpp3.png" alt="WhatsApp"/></a></snap>
         <div class="container-fluid" id="container1" >
             <div class="row" id="cabecalho">
                 <div id='logo' class="col-3">
@@ -25,21 +26,28 @@
                 </div>
                 <div id="menu" class="col-9">
                     <ul>
-                        <li><a class='color'>Sobre</a></li>
-                        <li><a class='color'>Produtos</a></li>
-                        <li><a class='color'>Blog</a></li>
-                        <li><a class='color'>Contatos</a></li>
+                        <li><a class='color' href="">Sobre</a></li>
+                        <li><a class='color' href="">Produtos</a></li>
+                        <li><a class='color' href="">Blog</a></li>
+                        <li><a class='color' href="">Contatos</a></li>
                     </ul>
                 </div>
             </div>
             <div class="row" id="body1">
-                <div><h2>✨Vista-se para impressionar a si mesma✨</h2></div>
+                <div>
+                    <h2>✨Vista-se para impressionar a si mesma✨</h2>
+                    <h3>🛵entregamos na grande Vitória 🛵</h3>
+                </div>
             </div>
         </div>
+
+        <hr/>
 
         <div class="container-fluid" id="about">
             <h1>sobre</h1>
         </div>
+
+        <hr/>
 
         <div class="container-fluid" id="products" >
             <div id="containerProducts">
@@ -88,9 +96,13 @@
             </div>
         </div>
 
+        <hr/>
+
         <div class="container-fluid" id="blog">
             <h1>blog</h1>
         </div>
+
+        <hr/>
 
         <div class="container-fluid" id="contacts" >
             <h1>contatos</h1>
