add keyframes 1 and att to HTML5

--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
     <body>
         <snap id="wpp"><a href=""><img src="/images/wpp3.png" alt="WhatsApp"/></a></snap>
         <div class="container-fluid" id="container1" >
-            <div class="row" id="cabecalho">
+            <article class="row" id="cabecalho">
                 <div id='logo' class="col-3">
                     <div class='logoImagem'></div>
                     <div id="logoNome"><a>BELLITA</a></div>
                 </div>
-                <div id="menu" class="col-9">
+                <nav id="menu" class="col-9">
                     <ul>
                         <li><a class='color' href="">Sobre</a></li>
                         <li><a class='color' href="">Produtos</a></li>
                         <li><a class='color' href="">Blog</a></li>
                         <li><a class='color' href="">Contatos</a></li>
                     </ul>
-                </div>
-            </div>
-            <div class="row" id="body1">
-                <div>
+                </nav>
+            </article>
+            <article class="row" id="body1">
+                <section>
                     <h2>✨Vista-se para impressionar a si mesma✨</h2>
                     <h3>🛵entregamos na grande Vitória 🛵</h3>
-                </div>
-            </div>
+                </section>
+            </article>
         </div>
 
         <hr/>
@@ -50,8 +50,8 @@
         <hr/>
 
         <div class="container-fluid" id="products" >
-            <div id="containerProducts">
-                <div class="row"  id="produtoDad">
+            <article id="containerProducts">
+                <section class="row"  id="produtoDad">
                     <div class="col">
                         <img src="images/1.jpeg" alt="produto">
                         <p>R$ 100</p>
@@ -64,8 +64,8 @@
                         <img src="images/3.jpeg" alt="produto">
                         <p>R$ 100</p>
                     </div>
-                </div>
-                <div class="row" id="produtoDad">
+                </section>
+                <section class="row" id="produtoDad">
                     <div class="col" id="produto">
                         <img src="images/4.jpeg" alt="produto">
                         <p>R$ 100</p>
@@ -78,8 +78,8 @@
                         <img src="images/6.jpeg" alt="produto">
                         <p>R$ 100</p>
                     </div>
-                </div>
-                <div class="row"  id="produtoDad">
+                </section>
+                <section class="row"  id="produtoDad">
                     <div class="col">
                         <img src="images/7.jpeg" alt="produto">
                         <p>R$ 100</p>
@@ -92,8 +92,8 @@
                         <img src="images/9.jpeg" alt="produto">
                         <p>R$ 100</p>
                     </div>
-                </div>
-            </div>
+                </section>
+            </article>
         </div>
 
         <hr/>
@@ -110,7 +110,7 @@
 
 
 
-        <!-- JavaScript Bundle with Popper -->
+         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     </body>
 </html>
