add products page

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             <article class="row" id="cabecalho">
                 <div id='logo' class="col-3">
                     <div class='logoImagem'></div>
-                    <div id="logoNome"><a>BELLITA</a></div>
+                    <div id="logoNome"><a href="index.html">BELLITA</a></div>
                 </div>
                 <nav id="menu" class="col-9">
                     <ul>
                         <li><a class='color' href="">Sobre</a></li>
-                        <li><a class='color' href="">Produtos</a></li>
+                        <li><a class='color' href="/src/pages/produtos.html">Produtos</a></li>
                         <li><a class='color' href="">Blog</a></li>
                         <li><a class='color' href="">Contatos</a></li>
                     </ul>
